# CCME

./: CMakeLists.txt  README.md  ccme.pc.in  notesheet.txt
src/: CMakeLists.txt  ccme.h  matrix.cpp  matrix.h
src/Matrices/: ColumnMajorMatrix.h  DenseColRectGeneralMatrix.cpp  DenseColRectGeneralMatrix.h  DenseMatrix.cpp  DenseMatrix.h  DiagonalMajorMatrix.cpp  DiagonalMajorMatrix.h  Matrix.cpp  Matrix.h  MatrixUsageException.cpp  NaiveMatrix.cpp  NaiveMatrix.h  RowMajorMatrix.cpp  RowMajorMatrix.h  SparseMatrix.h  matrix.h
unit_tests/: CMakeLists.txt  testMatrix.cpp  testMatrixArithmetic.cpp
unit_tests/Data/: A.txt  B.txt  diffAB.txt  prodAA.txt  prodAB.txt  prodAx.txt  prodAy.txt  prodBA.txt  prodBB.txt  prodBx.txt  prodBy.txt  prodxAx.txt  prodyBx.txt  sumAB.txt  x.txt  y.txt
unit_tests/Matrices/: CMakeLists.txt
unit_tests/Matrices/NaiveMatrix/: CMakeLists.txt
unit_tests/Matrices/NaiveMatrix/Arithmetic/: CMakeLists.txt  testMatrixAddition.cpp  testMatrixTranspose.cpp
unit_tests/Matrices/NaiveMatrix/BasicFunctionality/: CMakeLists.txt  falseInitialization.cpp  testInitialization.cpp  testMatrixSet.cpp
unit_tests/Matrices/NaiveMatrix/Conversion/: CMakeLists.txt
