add_subdirectory(NaiveMatrix)

#[[
add_subdirectory(DenseColRectGeneral)
add_subdirectory(DenseColSquareAsym)
add_subdirectory(DenseColSquareSym)
add_subdirectory(DenseColSquareSymHess)
add_subdirectory(DenseColSquareAsymHess)
add_subdirectory(DenseColSquareTriang)

add_subdirectory(SparseColRectGeneral)
add_subdirectory(SparseColSquareAsym)
add_subdirectory(SparseColSquareSym)
add_subdirectory(SparseColSquareSymHess)
add_subdirectory(SparseColSquareAsymHess)
add_subdirectory(SparseColSquareTriang)

add_subdirectory(DenseRowRectGeneral)
add_subdirectory(DenseRowSquareAsym)
add_subdirectory(DenseRowSquareSym)
add_subdirectory(DenseRowSquareSymHess)
add_subdirectory(DenseRowSquareAsymHess)
add_subdirectory(DenseRowSquareTriang)

add_subdirectory(SparseRowRectGeneral)
add_subdirectory(SparseRowSquareAsym)
add_subdirectory(SparseRowSquareSym)
add_subdirectory(SparseRowSquareSymHess)
add_subdirectory(SparseRowSquareAsymHess)
add_subdirectory(SparseRowSquareTriang)

add_subdirectory(DenseDiagRectGeneral)
add_subdirectory(DenseDiagSquareAsym)
add_subdirectory(DenseDiagSquareSym)
add_subdirectory(DenseDiagSquareSymHess)
add_subdirectory(DenseDiagSquareAsymHess)
add_subdirectory(DenseDiagSquareTriang)

add_subdirectory(SparseDiagRectGeneral)
add_subdirectory(SparseDiagSquareAsym)
add_subdirectory(SparseDiagSquareSym)
add_subdirectory(SparseDiagSquareSymHess)
add_subdirectory(SparseDiagSquareAsymHess)
add_subdirectory(SparseDiagSquareTriang)
]]
